# PTZOptics-obs-plugin

PTZController/: CMakeLists.txt  PTZController.cpp  PTZController.h  SDL_Joysticks.h  aboutus.ui  constants.h  joystickwrapper.cpp  joystickwrapper.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ptzqrc.qrc
